Update and rename cv.tex to cv_br.tex

--- a/cv_br.tex
+++ b/cv_br.tex
@@ -67,7 +67,7 @@
 \vspace{1em}
 
 % Experiences %
-\section*{Experience}
+\section*{Experiência}
 \vspace{0.6em}
 
 % Experience 1 %
@@ -134,7 +134,7 @@
 % \end{itemize}
 
 % % Educations %
-\section*{Education}
+\section*{Educação}
 \vspace{0.6em}
 \entry{UNINTER}{2024 -- cursando}{Bacharelado em Engenharia da Computação}
 
